--- a/src/app/pages/artdatabase/artdatabase.component.scss
+++ b/src/app/pages/artdatabase/artdatabase.component.scss
@@ -189,7 +189,6 @@ li:hover span.menu-item, a.active span.menu-item {
 .sidebar-section {
   width: 300px;
   margin-right: 30px;
-  height: 1182px;
   padding: 0px;
   background-color: white;
 }
@@ -697,3 +696,63 @@ margin-top: 20px;
 .panel-group {
   margin-top: 30px;
 }
+
+.multi-input {
+  margin-top: 20px;
+}
+
+.multi-input span, .single-input span {
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+.multi-inputcontent {
+  display: flex;
+  height: 38px;
+}
+
+.multi-from {
+  margin-right: 10px;
+}
+
+.multi-from input {
+  box-shadow: inset 0 0px 0 #ddd !important;
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  line-height: 16px;
+  height: 100%;
+  border-radius: 2px;
+}
+
+.multi-to {
+  margin-left: 10px;
+}
+
+.multi-to input {
+  box-shadow: inset 0 0px 0 #ddd !important;
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  line-height: 16px;
+  height: 100%;
+  border-radius: 2px;
+}
+
+.single-input {
+  margin: 20px 0px;
+}
+
+.single-input input {
+  box-shadow: inset 0 0px 0 #ddd !important;
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  line-height: 16px;
+  height: 38px;
+  border-radius: 2px;
+}
+
