--- a/src/app/pages/artdatabase/artdatabase.component.scss
+++ b/src/app/pages/artdatabase/artdatabase.component.scss
@@ -27,10 +27,17 @@
 
 span.menu-item {
   display: inline-block;
-  border-bottom: 2px solid transparent;
   opacity: 0.4;
-
 }
+
+span.menu-item:after {
+  content: "";
+  display: block;
+  width: 26px;
+  padding-top: 20px;
+  border-bottom: 2px solid transparent;
+}
+
 ul li {
   margin-right: 20px;
   padding: 0px;
@@ -48,15 +55,24 @@ ul a {
   line-height: 24px;
 }
 
+
 li:hover span.menu-item, a.active span.menu-item {
   cursor: pointer;
-  border-bottom: 2px solid #7976ff;
   opacity: 1;
   color: #7976ff;
   font-family: "Brave Sans";
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+}
+
+li:hover span.menu-item:after, a.active span.menu-item:after {
+  content: "";
+  display: block;
+  width: 20px;
+  padding-top: 10px;
+  border-bottom: 2px solid #7976ff;
+  cursor: pointer;
 }
 
 .tab-section {
@@ -756,3 +772,7 @@ margin-top: 20px;
   border-radius: 2px;
 }
 
+.slider-body {
+  width: 288px;
+  margin: 0px auto;
+}
